A good idea from Ronin: show a ghosted 100%-bar so you know how long it really is. Also hopefully fixed the lootable-area-invisible bug before you have built a port, and/or if it was warehouse.
git-svn-id: http://ecmanaut.googlecode.com/svn/trunk/sites/ikariam.org@548 c5938665-bd24-0410-9958-d597d88377d4

--- a/kronos-utils/kronos.css
+++ b/kronos-utils/kronos.css
@@ -290,6 +290,7 @@
 .underline .goods.sulfur { background-color: #E1BC4D; }
 .underline .goods.safe   { background-color: green; }
 .underline .goods.loot   { background-color: pink; }
+.underline .goods.last   { opacity: 0.3; }
 
 
 /* plunder/blockade view */
